allowing for public access to content
